{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 18,
  "lineage": "05776e66-9e7c-e013-7ac7-ea5bba462e05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0118cafa41f475c38",
            "association_id": "eipassoc-0d460374d0544b84b",
            "domain": "vpc",
            "id": "eipalloc-0118cafa41f475c38",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06ccfefcc49794ce5",
            "private_dns": "ip-10-0-0-248.ec2.internal",
            "private_ip": "10.0.0.248",
            "public_dns": "ec2-3-220-62-220.compute-1.amazonaws.com",
            "public_ip": "3.220.62.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377164529:internet-gateway/igw-0100f1b4d2b003a66",
            "id": "igw-0100f1b4d2b003a66",
            "owner_id": "891377164529",
            "tags": {
              "Name": "devp"
            },
            "tags_all": {
              "Name": "devp"
            },
            "vpc_id": "vpc-0e3643b08b3d3c8cd"
          },
          "dependencies": [
            "aws_vpc.devp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0118cafa41f475c38",
            "association_id": "eipassoc-0d460374d0544b84b",
            "connectivity_type": "public",
            "id": "nat-0f8b9cbec26a782e9",
            "network_interface_id": "eni-06ccfefcc49794ce5",
            "private_ip": "10.0.0.248",
            "public_ip": "3.220.62.220",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c75fa76dff86ec39",
            "tags": {
              "Name": "natgateway"
            },
            "tags_all": {
              "Name": "natgateway"
            }
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_subnet.pub",
            "aws_vpc.devp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377164529:route-table/rtb-073a4f57148f1a0ca",
            "id": "rtb-073a4f57148f1a0ca",
            "owner_id": "891377164529",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0100f1b4d2b003a66",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e3643b08b3d3c8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.devp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377164529:route-table/rtb-0db5faf4289fb7d38",
            "id": "rtb-0db5faf4289fb7d38",
            "owner_id": "891377164529",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f8b9cbec26a782e9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateroute"
            },
            "tags_all": {
              "Name": "privateroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3643b08b3d3c8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elasticip",
            "aws_nat_gateway.natgateway",
            "aws_subnet.pub",
            "aws_vpc.devp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089ac6684df04b5c4",
            "route_table_id": "rtb-073a4f57148f1a0ca",
            "subnet_id": "subnet-0c75fa76dff86ec39"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.customroute",
            "aws_subnet.pub",
            "aws_vpc.devp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010800ae38c321715",
            "route_table_id": "rtb-0db5faf4289fb7d38",
            "subnet_id": "subnet-07a7339033051b015"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_nat_gateway.natgateway",
            "aws_route_table.privateroute",
            "aws_subnet.pub",
            "aws_subnet.pvt",
            "aws_vpc.devp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ASG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377164529:security-group/sg-09535f7450ddee67d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09535f7450ddee67d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from vpc",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240319081841847800000001",
            "name_prefix": "terraform-",
            "owner_id": "891377164529",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e3643b08b3d3c8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377164529:subnet/subnet-0c75fa76dff86ec39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c75fa76dff86ec39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377164529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub"
            },
            "tags_all": {
              "Name": "pub"
            },
            "vpc_id": "vpc-0e3643b08b3d3c8cd"
          },
          "dependencies": [
            "aws_vpc.devp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377164529:subnet/subnet-07a7339033051b015",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a7339033051b015",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377164529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt"
            },
            "tags_all": {
              "Name": "pvt"
            },
            "vpc_id": "vpc-0e3643b08b3d3c8cd"
          },
          "dependencies": [
            "aws_vpc.devp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377164529:vpc/vpc-0e3643b08b3d3c8cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-072c1ed0b0852f6c6",
            "default_route_table_id": "rtb-0b9766ccb593bac85",
            "default_security_group_id": "sg-0cd5592f3774429bd",
            "dhcp_options_id": "dopt-048aeb79d9ca36e41",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3643b08b3d3c8cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9766ccb593bac85",
            "owner_id": "891377164529",
            "tags": {
              "name": "devp"
            },
            "tags_all": {
              "name": "devp"
            }
          }
        }
      ]
    }
  ]
}